--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -48,5 +48,5 @@ jobs:
         
       - name: Run unit tests
         run: |
-          ./scripts/run-ganache.sh
+          ./scripts/run-ganache.sh &> ganache.log &
           make test
