match gsn solidity version (#13)

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-/bin/
-/contracts/abi
-/contracts/bin
-eth.key
+/bin
+/eth.key
+/examples/mock_recipient/contracts/bin
+/impls/gsnforwarder/contracts/abi
+/impls/gsnforwarder/contracts/bin
+/impls/mforwarder/contracts/bin
