--- a/.golangci.yml
+++ b/.golangci.yml
@@ -11,10 +11,22 @@ linters-settings:
   govet:
     # report about shadowed variables
     check-shadowing: true
+    enable-all: true
+    disable:
+      - fieldalignment
+
+  revive:
+    rules:
+      - name: package-comments
+        disabled: true
+
+  goimports:
+    local-prefixes: github.com/athanorlabs/go-relayer
 
   maligned:
     # print struct with more effective memory layout or not, false by default
     suggest-new: true
+
   dupl:
     # tokens count to trigger issue, 150 by default
     threshold: 100
@@ -23,12 +35,12 @@ linters-settings:
     # Correct spellings using locale preferences for US or UK.
     # Default is to use a neutral variety of English.
     # Setting locale to US will correct the British spelling of 'colour' to 'color'.
+
   gocritic:
     # Enable multiple checks by tags, run `GL_DEBUG=gocritic golangci-lint` run to see all tags and checks.
     # Empty list by default. See https://github.com/go-critic/go-critic#usage -> section "Tags".
     enabled-tags:
       - performance
-
     settings: # settings passed to gocritic
       captLocal: # must be valid enabled check name
         paramsOnly: true
@@ -37,13 +49,14 @@ linters-settings:
 
 linters:
   enable:
+    - bidichk
     - bodyclose
     - depguard
     - errcheck
+    - exportloopref
     - goconst
     - gocyclo
     - gofmt
-    - goimports
     - goimports
     - goprintffuncname
     - gosec
@@ -52,14 +65,16 @@ linters:
     - ineffassign
     - lll
     - megacheck
-    - megacheck
     - misspell
     - nolintlint
+    - predeclared
     - revive
     - staticcheck
+    - typecheck
     - unconvert
     - unparam
-    - varcheck
+    - unused
+    - usestdlibvars
 
   fast: false
 
